--- a/UIT-CodeGym/UIT-CodeGym.csproj
+++ b/UIT-CodeGym/UIT-CodeGym.csproj
@@ -106,6 +106,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\ask.png" />
+	  <None Remove="Resources\Images\digital_library.png" />
 	  <None Remove="Resources\Images\loginbackground.png" />
 	  <None Remove="Resources\Fonts\static\Raleway-BoldItalic.ttf" />
 	  <None Remove="Resources\Fonts\static\Raleway-MediumItalic.ttf" />
@@ -125,9 +127,11 @@
 	  <None Remove="Resources\Fonts\static\Raleway-Thin.ttf" />
 	  <None Remove="Resources\Fonts\static\Raleway-Italic.ttf" />
 	  <None Remove="Resources\Fonts\static\Raleway-Bold.ttf" />
+	  <None Remove="Resources\Images\online_learning.png" />
 	  <None Remove="Resources\Images\rectangle27.svg" />
 	  <None Remove="Resources\Images\group42.svg" />
 	  <None Remove="Resources\Images\group421.svg" />
+	  <None Remove="Resources\Images\user.png" />
 	</ItemGroup>
 
 	<ItemGroup>
